dark version - welcome screen top gap fixed + modal details (with list of guest inside) 2

--- a/src/Details.css
+++ b/src/Details.css
@@ -1,5 +1,5 @@
 .main {
-    height: 100vh;
+    height: 50vh;
     background: #020d19;
 }
 
@@ -90,3 +90,7 @@ ul {
 
 
 
+.ui.modals .header, .ui.modals .content, .ui.modals .actions {
+    background: #020d19;
+    color: #D05253;
+}
